# python-usrus-bot

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
python_usrus_bot/: AwACAgIAAxkBAAM4ZQxbaYdvKuCI_xhGaioAATi4HCcVAAILNgACbx5gSET3n3LRcowZMAQ.tmp  AwACAgIAAxkBAAM5ZQxboo7ggm_2YlYUdSMkmQNBV-wAAg82AAJvHmBI6vt_ol6agTUwBA.tmp  AwACAgIAAxkBAAMzZQxZwHzcZXvPOegVQleBW9HzUNMAAu01AAJvHmBIIlBJwLVmjT4wBA.tmp  main.py
python_usrus_bot/bot/: bot.py  bot_context.py  handle_add_answer_style.py  handle_add_description.py  handle_description.py  handle_info.py  handle_mem.py  handle_obscene_info.py  handle_obscene_stat.py  handle_voice_reply.py  handle_who_is_right.py  handler_answer_voice.py  helpers.py
python_usrus_bot/chat_gpt/: chat_gpt.py
python_usrus_bot/database/: abstract_repository.py  answer_style_repository.py  description_repository.py  obscene_expressions_stat_repository.py  user_info_repository.py
python_usrus_bot/models/: answer_style.py  description.py  obscene_expressions_stat.py  user_info.py
python_usrus_bot/network/: HTMLQueryBuilder.py  Network.py
python_usrus_bot/stt/: stt.py
python_usrus_bot/text_utills/: obscene_words.py  text_processing.py
python_usrus_bot/tts/: tts.py
python_usrus_bot/yandex_pictures/: find_pictures.py
